--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,38 @@
 			<version>1.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+
+
 	</dependencies>
+
+
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<!-- <includes> <include>loginTest.java</include> <include>TestingAnnotations.java</include> 
+						</includes> -->
+
+					<suiteXmlFiles>
+						<suiteXmlFile>RunThisTest.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+
+	</build>
 </project>
 
 
